Updated image width

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 							</p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
-							<span class="image"><img src="images/app.png" style="max-height: 500px" alt="" /></span>
+							<span class="image"><img src="images/app.png" style="max-height: 500px; max-width:100%" alt="" /></span>
 						</div>
 					</div>
 				</div>
@@ -63,7 +63,7 @@
 				<div class="container">
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
-							<span class="image"><img src="images/app2.png" style="max-height: 500px" alt="" /></span>
+							<span class="image"><img src="images/app2.png" style="max-height: 500px; max-width:100%" alt="" /></span>
 						</div>
 						<div class="col-6 col-12-medium">
 							<header class="major" style="margin-top:20px">
