--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<img src="./images/chefai4.png" style="border-radius: 10%;filter: drop-shadow(0px 10px 5px #333);" height="150px"/>
 					<br/>
 					<br/>
-					<h1>Hi, I'm the <strong>Gastro Chef</strong>, 
+					<h1 style="margin-top:20px">Hi, I'm the <strong>Gastro Chef</strong>, 
 					<br/>here to cook up
 					<i>gastritis-friendly</i> recipes <br/>
 					with your ingredients.</h1>
@@ -28,8 +28,7 @@
 					that are gentle on the stomach, catering specifically to those managing gastritis.</p>
 					<br/>
 					<p>Coming to the App Store on 2/29.</p>
-					<br/>
-					<img src="./images/Download_on_the_App_Store.svg" height="50px"/>
+					<img src="./images/Download_on_the_App_Store.svg" height="50px" style="margin-top:20px"/>
 				</div>
 			</section>
 
