Added privacy policy and swapped footers

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 					<br/>here to cook up
 					<i>gastritis-friendly</i> recipes <br/>
 					with your ingredients.</h1>
-					<p>Using a sophisticated AI model, my goal is to provide meal options<br />
-					that are gentle on the stomach, catering specifically to those managing gastritis.</p>
+					<p><b>Using a sophisticated AI model, my goal is to provide meal options<br />
+					that are gentle on the stomach, catering specifically to those managing gastritis.</b></p>
 					<br/>
 					<p>Coming to the App Store on 2/29.</p>
 					<br/>
@@ -100,11 +100,11 @@
 				<ul class="icons">
 					<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="https://www.instagram.com/gastrochefai/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="mailto:gastrochefai@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Gastro Chef AI</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; Gastro Chef AI</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li> <a href="privacy.html">Privacy policy</a></li> 
 				</ul>
 			</section>
 
