--- a/privacy.html
+++ b/privacy.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Gastro Chef AI</title>
+		<title>Gastro Chef AI - Privacy Policy</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -41,7 +41,7 @@
                 <li><a href="mailto:gastrochefai@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
             </ul>
             <ul class="copyright">
-                <li>&copy; Gastro Chef AI</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li> <a href="privacy.html">Privacy policy</a></li> 
+                <li>&copy; Gastro Chef AI</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li><a href="privacy.html">Privacy policy</a></li><li><a href="references.html">References</a></li>
             </ul>
         </section>
 		<!-- Scripts -->
