Added official link to the app

--- a/index.html
+++ b/index.html
@@ -28,15 +28,17 @@
 					<img src="./images/chefai4.png" style="border-radius: 10%;filter: drop-shadow(0px 10px 5px #333);" height="150px"/>
 					<br/>
 					<br/>
-					<h1 style="margin-top:20px">Hi, I'm the <strong>Gastro Chef</strong>, 
+					<h1 style="margin-top:20px">Hi, I'm the <strong><a href="https://apps.apple.com/us/app/chef-ai/id1664636964">Gastro Chef</a></strong>, 
 					<br/>here to cook up
 					<i>gastritis-friendly</i> recipes <br/>
 					with your ingredients.</h1>
 					<p><b>Using a sophisticated AI model, my goal is to provide meal options<br />
 					that are gentle on the stomach, catering specifically to those managing gastritis.</b></p>
 					<br/>
-					<p>Coming to the App Store on 2/29.</p>
-					<img src="./images/Download_on_the_App_Store.svg" height="50px" style="margin-top:20px"/>
+					<p><b>Available now on the App Store.</b></p>
+					<a href="https://apps.apple.com/us/app/chef-ai/id1664636964" style="border-bottom: none">
+						<img src="./images/Download_on_the_App_Store.svg" height="50px" style="margin-top:20px"/>
+					</a>
 				</div>
 			</section>
 
@@ -97,8 +99,10 @@
 					<header class="major">
 						<h2>Ready to meet the Gastro Chef?</h2>
 					</header>
-					<p>Download Gastro Chef on the App Store, on 2/29.</p>
-					<img src="./images/Download_on_the_App_Store.svg" height="50px"/>
+					<p>Download Gastro Chef on the App Store, today!</p>
+					<a href="https://apps.apple.com/us/app/chef-ai/id1664636964" style="border-bottom: none">
+						<img src="./images/Download_on_the_App_Store.svg" height="50px"/>
+					</a>
 				</div>
 			</section>
 
